			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02n: *********************************

IMP: (05/05/05, DN) JELIB 'R' line can accept either 5 or 7 pieces.

BUG: (05/05/05, DN) Highlighting an off-page connector does not highlight an attached bus (Bug #262)
FIX: In Netlist use getBusWidth(Nodable, PortProto) instead of PortProto.getNameKey().busWidth().

BUG: (05/04/05, SMR) Schematic busses don't have clean ends;
     wires connecting to busses don't show blobs.
FIX: Better determination of bus pin drawing.

BUG: (05/04/05, SMR) Verilog allows reserved words in its files (Bug #296).
FIX: Check for reserved words and prepend a "_".

************************* Version 8.02m: *********************************

IMP: (05/03/05, GVG) Verbose Redo/Undo: extra message in message window (for Tarik).

BUG: (05/03/05, SMR) Spice primitives generate incorrect Verilog output (Bug #293).
FIX: In Verilog.writeCellTopology(), ignore cell instances whose prototypes are icons.

BUG: (05/03/05, SMR) Reading ELIB files may consume all of memory (Bug #294).
FIX: In input.ELIB.readString(), if a string's length is greater than the remaining bytes
     in the file, flag it as an error.

IMP: (05/03/05, GVG) Adding class to query hardware accelaration for J3D.

BUG: (05/02/05. GVG) Double-click on jelib/elib file doesn't open the library in Electric.app (Bug #290)
FIX: Missing code in MacOSXInterface.handleOpenFile.

BUG: (05/02/05, SMR) Explorer tree doesn't remember what is expanded when SIGNALS are shown (Bug #283).
FIX: Must remember entire path through tree, not just leaf nodes.

BUG: (05/02/05, SMR) PostScript text is too large, EPS bounding boxes are wrong (Bug #292).
FIX: In PostScript.psText(), reduce the text size.

BUG: (05/02/05, SMR) Layer opacity is not remembered (Bug #288).
FIX: In EGraphics.setOpacity(), use preferences.
