@@ -4,6 +4,9 @@ NOTE: Please place changes under the version that will be released next.
 
 ************************* Version 8.02n: *********************************
 
+BUG: (05/05/05, GVG) Infinite loop after executing "Repeat Last Action" (Bug #246)
+FIX: In RepeatLastCommandListener, we ignore actions coming from "Repeat Last Action". 
+
 IMP: (05/05/05, DN) JELIB 'R' line can accept either 5 or 7 pieces.
 
 BUG: (05/05/05, DN) Highlighting an off-page connector does not highlight an attached bus (Bug #262)
